# zeabus_hydrophone

./: .gitattributes  .gitignore  readme.md
.metadata/: version.ini
FPGA_firmware/: biquad1.v  fx3_interface_tb_func_synth.wcfg  gentest.py  gentest_2.py  gentest_biquad.py  gentest_composite.py  gentest_fir.py  gentest_small.py  hydrophone_dsp.xpr  hydrophone_trigger_tb_func_synth.wcfg  seapup_hydrophone.xdc  show_out.py  zeabus_hydrophone.xdc  zeabus_hydrophone.xpr  zeabus_hydrphone_tb_func_synth.wcfg  ztex_zeabus.xdc
FX3S_firmware/: makefile  printf.c  printf.h  zeabus.h  zeabus_app_init.c  zeabus_config.c  zeabus_config.h  zeabus_eeprom.c  zeabus_eeprom.h  zeabus_error.c  zeabus_error.h  zeabus_flash.c  zeabus_flash.h  zeabus_fpgaconf.c  zeabus_fpgaconf.h  zeabus_gpio.c  zeabus_gpio.h  zeabus_hp_fx3s.c  zeabus_hp_fx3s.c.bak.c  zeabus_hp_fx3s.img  zeabus_slavefifo.c  zeabus_slavefifo.h  zeabus_usb.c  zeabus_usb.h  zeabus_usb_cmd.h
MatLab/: FIR_Gen.m  Recording_2018.txt  zeabus_hydrophone.slx  zeabus_hydrophone_concrete.slx  zeabus_hydrophone_concrete_sfun.mexw64  zeabus_hydrophone_fixed_point.slx
SlaveFIFO_verify/: FIFO_verify.xdc  project_1.xpr
ZEABUS-STM32-DSP/: .cproject  .mxproject  .project  STM32H743ZITx_FLASH.ld  ZEABUS-STM32-DSP Debug.cfg  ZEABUS-STM32-DSP Run.cfg  ZEABUS-STM32-DSP.ioc  mx.scratch
circuit/: analog.kicad_sch  analog.sch  fp-lib-table  sym-lib-table  zeabus_hydrophone.kicad_pcb  zeabus_hydrophone.kicad_pcb-bak  zeabus_hydrophone.kicad_prl  zeabus_hydrophone.kicad_pro  zeabus_hydrophone.kicad_sch  zeabus_hydrophone.pro  (+5 more)
python/: CMakeLists.txt  Output.txt  hydrophone_node.py  hydrophone_serial.py  load_variable_example.py  lowpass.py  mlBearingEstimator.py  mlBearingEstimatorActualData.py  package.xml  rec_sig.csv  rec_sig12.txt  rec_sig34.txt  store.pckl  uart_test.py  uart_test_2.py
python/launch/: zeabus_hydrophone.launch
python/src/: bearingEstimator.py  bit2brv.py  controller_firmware.img  demodulation.py  fifo_verify.brv  fw_burning.py  hydrophone_app.py  hydrophone_main.py  hydrophone_ros_node.py  hydrophone_serial.py  hydrophone_usb.py  hydrophone_usb_app.py  lightshow.bit  lowpass.py  plot_data.py  seapup_hydrophone.bit  seapup_hydrophone.brv  zeabus_hydrophone.bit  zeabus_hydrophone.brv
python/src/old_fpga/: zeabus_hydrophone.bit  zeabus_hydrophone.brv
python/srv/: HydrophoneCommand.srv  HydrophoneData.srv
(+2330 files in other folders)
