<?xml version="1.0"?>
<package format="2">
    <name>zeabus_hydrophone</name>
    <version>0.0.0</version>
    <description>The zeabus_hydrophone package</description>

    <maintainer email="zeabus@todo.todo">zeabus</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>

    <exec_depend>rospy</exec_depend>
</package>
